objects/Survey_Results__c.object
<CustomObject>
    <description>Custom object to hold survey results.</description>
    <fields>
        <fullName>Customer_Survey__c</fullName>
        <label>Customer Survey</label>
        <referenceTo>Customer_Survey__c</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Partner related to this survey result line item</description>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Median__c</fullName>
        <description>The Median score for this Question across all partners for this survey.</description>
        <label>Partner Median</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>The question for this survey line item</description>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responses__c</fullName>
        <description>The total number of end customer responses survey line item for this Partner account</description>
        <label>Responses</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The average score for this line item for this partner</description>
        <label>Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Survey Results</label>
    <nameField>
        <label>Survey Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>